파라미터 검증 추가

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,3 +8,10 @@ notice.re-login.request=\uB85C\uADF8\uC778\uC774 \uD574\uC81C\uB418\uC5C8\uC2B5\
 error.send-email.fail=\uC774\uBA54\uC77C \uC804\uC1A1\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4. \uB300\uC0C1=''{0}''
 
 error.user-id-pw.incorrect=\uC0AC\uC6A9\uC790 \uC544\uC774\uB514 \uD639\uC740 \uD328\uC2A4\uC6CC\uB4DC\uAC00 \uC815\uD655\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
+
+constraint.user-name.pattern=\uC774\uB984\uC740 \uD55C\uAE00\uB9CC \uC0AC\uC6A9 \uAC00\uB2A5\uD558\uBA70 2 ~ 20 \uAE00\uC790\uC5EC\uC57C \uD569\uB2C8\uB2E4.
+constraint.user-phone.pattern=\uB9DE\uC9C0 \uC54A\uB294 \uD734\uB300\uD3F0 \uBC88\uD638 \uC591\uC2DD\uC785\uB2C8\uB2E4.
+constraint.user-email.pattern=\uB9DE\uC9C0 \uC54A\uB294 \uC774\uBA54\uC77C \uC591\uC2DD\uC785\uB2C8\uB2E4.
+constraint.user-id.pattern=\uC544\uC774\uB514\uB294 \uC601\uBB38 \uB300\uC18C\uBB38\uC790, \uC22B\uC790, \uD558\uC774\uD508, \uC5B8\uB354\uC2A4\uCF54\uC5B4\uB9CC \uC0AC\uC6A9 \uAC00\uB2A5\uD558\uBA70 5 ~ 20 \uAE00\uC790\uC5EC\uC57C \uD569\uB2C8\uB2E4.
+constraint.user-pw.pattern=\uBE44\uBC00\uBC88\uD638\uB294 \uD558\uB098 \uC774\uC0C1\uC758 \uB300\uBB38\uC790, \uC18C\uBB38\uC790, \uC22B\uC790, \uD2B9\uC218\uBB38\uC790\uB97C \uD3EC\uD568\uD574\uC57C \uD558\uBA70 8 ~ 30 \uAE00\uC790\uC5EC\uC57C \uD569\uB2C8\uB2E4.
+constraint.user-nickname.pattern=\uB2C9\uB124\uC784\uC740 \uC601\uBB38 \uB300\uC18C\uBB38\uC790, \uC22B\uC790, \uD55C\uAE00\uB9CC \uC0AC\uC6A9 \uAC00\uB2A5\uD558\uBA70 2 ~ 10 \uAE00\uC790\uC5EC\uC57C \uD569\uB2C8\uB2E4.
