--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -8,3 +8,10 @@ notice.re-login.request=Login has been disabled. Please log in again.
 error.send-email.fail=Email sending failed. target=''{0}''
 
 error.user-id-pw.incorrect=Your user ID or password is incorrect.
+
+constraint.user-name.pattern=The name can only be in Korean and must be 2 to 20 characters.
+constraint.user-phone.pattern=Invalid mobile phone number format.
+constraint.user-email.pattern=Invalid email format.
+constraint.user-id.pattern=The ID can only contain uppercase and lowercase letters, numbers, hyphens, and underscores, and must be 5 to 20 characters long.
+constraint.user-pw.pattern=Your password must contain at least one uppercase letter, lowercase letter, number, or special character and must be 8 to 30 characters long.
+constraint.user-nickname.pattern=Nicknames can only contain uppercase and lowercase English letters, numbers, and Korean characters, and must be 2 to 10 characters long.
