--- a/src/main/resources/messages_ja.properties
+++ b/src/main/resources/messages_ja.properties
@@ -8,3 +8,10 @@ notice.re-login.request=\u30ED\u30B0\u30A4\u30F3\u304C\u89E3\u9664\u3055\u308C\u
 error.send-email.fail=\u96FB\u5B50\u30E1\u30FC\u30EB\u306E\u9001\u4FE1\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002 \u5BFE\u8C61=''{0}''
 
 error.user-id-pw.incorrect=\u30E6\u30FC\u30B6\u30FCID\u307E\u305F\u306F\u30D1\u30B9\u30EF\u30FC\u30C9\u304C\u6B63\u3057\u304F\u3042\u308A\u307E\u305B\u3093\u3002
+
+constraint.user-name.pattern=\u540D\u524D\u306F\u30CF\u30F3\u30B0\u30EB\u306E\u307F\u4F7F\u7528\u53EF\u80FD\u3067\u30012~20\u6587\u5B57\u3067\u306A\u3051\u308C\u3070\u306A\u308A\u307E\u305B\u3093\u3002
+constraint.user-phone.pattern=\u7121\u52B9\u306A\u643A\u5E2F\u96FB\u8A71\u756A\u53F7\u30D5\u30A9\u30FC\u30E0\u3067\u3059\u3002
+constraint.user-email.pattern=\u7121\u52B9\u306A\u96FB\u5B50\u30E1\u30FC\u30EB \u30D5\u30A9\u30FC\u30E0\u3067\u3059\u3002
+constraint.user-id.pattern=ID\u306F\u82F1\u8A9E\u306E\u5927\u6587\u5B57\u3068\u5C0F\u6587\u5B57\u3001\u6570\u5B57\u3001\u30CF\u30A4\u30D5\u30F3\u3001\u30A2\u30F3\u30C0\u30FC\u30B9\u30B3\u30A2\u306E\u307F\u4F7F\u7528\u3067\u304D\u30015~20\u6587\u5B57\u3067\u306A\u3051\u308C\u3070\u306A\u308A\u307E\u305B\u3093\u3002
+constraint.user-pw.pattern=\u30D1\u30B9\u30EF\u30FC\u30C9\u306B\u306F\u30011 \u3064\u4EE5\u4E0A\u306E\u5927\u6587\u5B57\u3001\u5C0F\u6587\u5B57\u3001\u6570\u5B57\u3001\u7279\u6B8A\u6587\u5B57\u3092\u542B\u3081\u308B\u5FC5\u8981\u304C\u3042\u308A\u30018 ~ 30 \u6587\u5B57\u3067\u3042\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
+constraint.user-nickname.pattern=\u30CB\u30C3\u30AF\u30CD\u30FC\u30E0\u306F\u82F1\u8A9E\u306E\u5927\u6587\u5B57\u3068\u5C0F\u6587\u5B57\u3001\u6570\u5B57\u3001\u30CF\u30F3\u30B0\u30EB\u306E\u307F\u4F7F\u7528\u3067\u304D\u30012~10\u6587\u5B57\u3067\u306A\u3051\u308C\u3070\u306A\u308A\u307E\u305B\u3093\u3002
