회원가입 로직 일부 구현

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,6 +9,8 @@ error.send-email.fail=\uC774\uBA54\uC77C \uC804\uC1A1\uC5D0 \uC2E4\uD328\uD588\u
 
 error.user-id-pw.incorrect=\uC0AC\uC6A9\uC790 \uC544\uC774\uB514 \uD639\uC740 \uD328\uC2A4\uC6CC\uB4DC\uAC00 \uC815\uD655\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 
+error.verification-code-type.unknown=\uC54C \uC218 \uC5C6\uB294 \uD655\uC778\uCF54\uB4DC \uD0C0\uC785\uC785\uB2C8\uB2E4.
+
 constraint.user-name.pattern=\uC774\uB984\uC740 \uD55C\uAE00\uB9CC \uC0AC\uC6A9 \uAC00\uB2A5\uD558\uBA70 2 ~ 20 \uAE00\uC790\uC5EC\uC57C \uD569\uB2C8\uB2E4.
 constraint.user-phone.pattern=\uB9DE\uC9C0 \uC54A\uB294 \uD734\uB300\uD3F0 \uBC88\uD638 \uC591\uC2DD\uC785\uB2C8\uB2E4.
 constraint.user-email.pattern=\uB9DE\uC9C0 \uC54A\uB294 \uC774\uBA54\uC77C \uC591\uC2DD\uC785\uB2C8\uB2E4.
