--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -9,6 +9,8 @@ error.send-email.fail=Email sending failed. target=''{0}''
 
 error.user-id-pw.incorrect=Your user ID or password is incorrect.
 
+error.verification-code-type.unknown=Unknown verification code type.
+
 constraint.user-name.pattern=The name can only be in Korean and must be 2 to 20 characters.
 constraint.user-phone.pattern=Invalid mobile phone number format.
 constraint.user-email.pattern=Invalid email format.
