--- a/src/main/resources/messages_ja.properties
+++ b/src/main/resources/messages_ja.properties
@@ -9,6 +9,8 @@ error.send-email.fail=\u96FB\u5B50\u30E1\u30FC\u30EB\u306E\u9001\u4FE1\u306B\u59
 
 error.user-id-pw.incorrect=\u30E6\u30FC\u30B6\u30FCID\u307E\u305F\u306F\u30D1\u30B9\u30EF\u30FC\u30C9\u304C\u6B63\u3057\u304F\u3042\u308A\u307E\u305B\u3093\u3002
 
+error.verification-code-type.unknown=\u4E0D\u660E\u306A\u691C\u8A3C\u30B3\u30FC\u30C9\u30BF\u30A4\u30D7\u3067\u3059\u3002
+
 constraint.user-name.pattern=\u540D\u524D\u306F\u30CF\u30F3\u30B0\u30EB\u306E\u307F\u4F7F\u7528\u53EF\u80FD\u3067\u30012~20\u6587\u5B57\u3067\u306A\u3051\u308C\u3070\u306A\u308A\u307E\u305B\u3093\u3002
 constraint.user-phone.pattern=\u7121\u52B9\u306A\u643A\u5E2F\u96FB\u8A71\u756A\u53F7\u30D5\u30A9\u30FC\u30E0\u3067\u3059\u3002
 constraint.user-email.pattern=\u7121\u52B9\u306A\u96FB\u5B50\u30E1\u30FC\u30EB \u30D5\u30A9\u30FC\u30E0\u3067\u3059\u3002
