--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,14 +2,14 @@ error.common.500=\uC77C\uC2DC\uC801\uC778 \uC624\uB958\uC785\uB2C8\uB2E4. \uC2DC
 error.common.401=\uC778\uC99D\uB418\uC9C0 \uC54A\uC740 \uC0AC\uC6A9\uC790\uC785\uB2C8\uB2E4. ip=''{0}'', uri=''{1}''
 error.common.403=\uD574\uB2F9 \uC790\uC6D0\uC5D0 \uC811\uADFC\uD560 \uAD8C\uD55C\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
 error.password.incorrect=\uBD80\uC815\uD655\uD55C \uBE44\uBC00\uBC88\uD638\uC785\uB2C8\uB2E4.
+error.user-id-pw.incorrect=\uC0AC\uC6A9\uC790 \uC544\uC774\uB514 \uD639\uC740 \uD328\uC2A4\uC6CC\uB4DC\uAC00 \uC815\uD655\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
+error.verification-code-type.unknown=\uC54C \uC218 \uC5C6\uB294 \uD655\uC778\uCF54\uB4DC \uD0C0\uC785\uC785\uB2C8\uB2E4.
+error.send-email.fail=\uC774\uBA54\uC77C \uC804\uC1A1\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4. \uB300\uC0C1=''{0}''
 
 notice.re-login.request=\uB85C\uADF8\uC778\uC774 \uD574\uC81C\uB418\uC5C8\uC2B5\uB2C8\uB2E4. \uB2E4\uC2DC \uB85C\uADF8\uC778\uD574\uC8FC\uC138\uC694.
 
-error.send-email.fail=\uC774\uBA54\uC77C \uC804\uC1A1\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4. \uB300\uC0C1=''{0}''
-
-error.user-id-pw.incorrect=\uC0AC\uC6A9\uC790 \uC544\uC774\uB514 \uD639\uC740 \uD328\uC2A4\uC6CC\uB4DC\uAC00 \uC815\uD655\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
-
-error.verification-code-type.unknown=\uC54C \uC218 \uC5C6\uB294 \uD655\uC778\uCF54\uB4DC \uD0C0\uC785\uC785\uB2C8\uB2E4.
+email.verification.subject=[TeamUp] \uC774\uBA54\uC77C \uC778\uC99D \uCF54\uB4DC\uC785\uB2C8\uB2E4
+email.verification.body=<h1>TeamUp \uC11C\uBE44\uC2A4 \uC774\uBA54\uC77C \uC778\uC99D \uCF54\uB4DC</h1><p>\uC548\uB155\uD558\uC138\uC694. \uD68C\uC6D0\uAC00\uC785\uC744 \uD658\uC601\uD569\uB2C8\uB2E4!</p><p>\uC544\uB798 \uC778\uC99D\uCF54\uB4E4\uB97C \uC785\uB825\uD558\uC5EC \uC774\uBA54\uC77C \uC778\uC99D\uC744 \uC644\uB8CC\uD574 \uC8FC\uC138\uC694.</p><div style="font-size: 24px; font-weight: bold; color: #007bff; text-align: center; margin: 20px 0; padding: 10px; background-color: #f0f0f0; border-radius: 5px;">{0}</div><p>\uC774 \uCF54\uB4DC\uB294 {1}\uBD84 \uB3D9\uC548\uB9CC \uC720\uD6A8\uD569\uB2C8\uB2E4. \uAC00\uC785 \uD6C4 \uB354 \uB9CE\uC740 \uC11C\uBE44\uC2A4\uB97C \uC774\uC6A9\uD574 \uBCF4\uC138\uC694.</p><p>\uAC10\uC0AC\uD569\uB2C8\uB2E4.</p>
 
 constraint.user-name.pattern=\uC774\uB984\uC740 \uD55C\uAE00\uB9CC \uC0AC\uC6A9 \uAC00\uB2A5\uD558\uBA70 2 ~ 20 \uAE00\uC790\uC5EC\uC57C \uD569\uB2C8\uB2E4.
 constraint.user-phone.pattern=\uB9DE\uC9C0 \uC54A\uB294 \uD734\uB300\uD3F0 \uBC88\uD638 \uC591\uC2DD\uC785\uB2C8\uB2E4.
