--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -2,14 +2,14 @@ error.common.500=This is a temporary error. If the issue is not resolved over ti
 error.common.401=Not authenticated user. ip=''{0}'', uri=''{1}''
 error.common.403=If applicable, you do not have permission to access it.
 error.password.incorrect=This password is incorrect.
+error.user-id-pw.incorrect=Your user ID or password is incorrect.
+error.verification-code-type.unknown=Unknown verification code type.
+error.send-email.fail=Email sending failed. target=''{0}''
 
 notice.re-login.request=Login has been disabled. Please log in again.
 
-error.send-email.fail=Email sending failed. target=''{0}''
-
-error.user-id-pw.incorrect=Your user ID or password is incorrect.
-
-error.verification-code-type.unknown=Unknown verification code type.
+email.verification.subject=[TeamUp] Email authentication code
+email.verification.body=<h1>TeamUp Service Email Authentication Code</h1><p>Hello and welcome to join!</p><p>Please complete the e-mail authentication by entering the authentication coefficients below.</p><div style="font-size: 24px; font-weight: bold; color: #007bff; text-align: center; margin: 20px 0; padding: 10px; background-color: #f0f0f0; border-radius: 5px;">{0}</div><p>This code is only valid for {1} minutes. Please try more services after signing up.</p><p>Thank you.</p>
 
 constraint.user-name.pattern=The name can only be in Korean and must be 2 to 20 characters.
 constraint.user-phone.pattern=Invalid mobile phone number format.
