--- a/src/main/resources/messages_ja.properties
+++ b/src/main/resources/messages_ja.properties
@@ -2,14 +2,14 @@ error.common.500=\u4E00\u6642\u7684\u306A\u30A8\u30E9\u30FC\u3067\u3059\u3002 \u
 error.common.401=\u8A8D\u8A3C\u3055\u308C\u3066\u3044\u306A\u3044\u30E6\u30FC\u30B6\u30FC\u3067\u3059\u3002 ip=''{0}'', uri=''{1}''
 error.common.403=\u305D\u306E\u30EA\u30BD\u30FC\u30B9\u306B\u30A2\u30AF\u30BB\u30B9\u3059\u308B\u6A29\u9650\u304C\u3042\u308A\u307E\u305B\u3093\u3002
 error.password.incorrect=\u4E0D\u6B63\u78BA\u306A\u30D1\u30B9\u30EF\u30FC\u30C9\u3067\u3059\u3002
+error.user-id-pw.incorrect=\u30E6\u30FC\u30B6\u30FCID\u307E\u305F\u306F\u30D1\u30B9\u30EF\u30FC\u30C9\u304C\u6B63\u3057\u304F\u3042\u308A\u307E\u305B\u3093\u3002
+error.verification-code-type.unknown=\u4E0D\u660E\u306A\u691C\u8A3C\u30B3\u30FC\u30C9\u30BF\u30A4\u30D7\u3067\u3059\u3002
+error.send-email.fail=\u96FB\u5B50\u30E1\u30FC\u30EB\u306E\u9001\u4FE1\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002 \u5BFE\u8C61=''{0}''
 
 notice.re-login.request=\u30ED\u30B0\u30A4\u30F3\u304C\u89E3\u9664\u3055\u308C\u307E\u3057\u305F\u3002 \u3082\u3046\u4E00\u5EA6\u30ED\u30B0\u30A4\u30F3\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 
-error.send-email.fail=\u96FB\u5B50\u30E1\u30FC\u30EB\u306E\u9001\u4FE1\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002 \u5BFE\u8C61=''{0}''
-
-error.user-id-pw.incorrect=\u30E6\u30FC\u30B6\u30FCID\u307E\u305F\u306F\u30D1\u30B9\u30EF\u30FC\u30C9\u304C\u6B63\u3057\u304F\u3042\u308A\u307E\u305B\u3093\u3002
-
-error.verification-code-type.unknown=\u4E0D\u660E\u306A\u691C\u8A3C\u30B3\u30FC\u30C9\u30BF\u30A4\u30D7\u3067\u3059\u3002
+email.verification.subject=[TeamUp] E\u30E1\u30FC\u30EB\u8A8D\u8A3C\u30B3\u30FC\u30C9\u3067\u3059
+email.verification.body=<h1>TeamUp\u30B5\u30FC\u30D3\u30B9\u306EE\u30E1\u30FC\u30EB\u8A8D\u8A3C\u30B3\u30FC\u30C9</h1><p>\u3053\u3093\u306B\u3061\u306F\u3002\u4F1A\u54E1\u767B\u9332\u3092\u6B53\u8FCE\u3057\u307E\u3059\uFF01</p><p>\u4EE5\u4E0B\u306E\u8A8D\u8A3C\u30B3\u30FC\u30C9\u3092\u5165\u529B\u3057\u3066\u3001\u96FB\u5B50\u30E1\u30FC\u30EB\u8A8D\u8A3C\u3092\u5B8C\u4E86\u3057\u3066\u304F\u3060\u3055\u3044\u3002</p><div style="font-size: 24px; font-weight: bold; color: #007bff; text-align: center; margin: 20px 0; padding: 10px; background-color: #f0f0f0; border-radius: 5px;">{0}</div><p>\u3053\u306E\u30B3\u30FC\u30C9\u306F {1} \u5206\u9593\u306E\u307F\u6709\u52B9\u3067\u3059\u3002 \u767B\u9332\u5F8C\u3001\u3088\u308A\u591A\u304F\u306E\u30B5\u30FC\u30D3\u30B9\u3092\u3054\u5229\u7528\u304F\u3060\u3055\u3044\u3002</p><p>\u3042\u308A\u304C\u3068\u3046\u3054\u3056\u3044\u307E\u3059\u3002</p>
 
 constraint.user-name.pattern=\u540D\u524D\u306F\u30CF\u30F3\u30B0\u30EB\u306E\u307F\u4F7F\u7528\u53EF\u80FD\u3067\u30012~20\u6587\u5B57\u3067\u306A\u3051\u308C\u3070\u306A\u308A\u307E\u305B\u3093\u3002
 constraint.user-phone.pattern=\u7121\u52B9\u306A\u643A\u5E2F\u96FB\u8A71\u756A\u53F7\u30D5\u30A9\u30FC\u30E0\u3067\u3059\u3002
