이메일 인증 코드 전송 및 확인 로직 작성

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -5,6 +5,8 @@ error.password.incorrect=This password is incorrect.
 error.user-id-pw.incorrect=Your user ID or password is incorrect.
 error.verification-code-type.unknown=Unknown verification code type.
 error.send-email.fail=Email sending failed. target=''{0}''
+error.email.already-exist=This is an email that has already been signed up.
+error.email-verification-code.incorrect=Invalid authentication number. Please check and re-enter.
 
 notice.re-login.request=Login has been disabled. Please log in again.
 
