--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,6 +5,8 @@ error.password.incorrect=\uBD80\uC815\uD655\uD55C \uBE44\uBC00\uBC88\uD638\uC785
 error.user-id-pw.incorrect=\uC0AC\uC6A9\uC790 \uC544\uC774\uB514 \uD639\uC740 \uD328\uC2A4\uC6CC\uB4DC\uAC00 \uC815\uD655\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 error.verification-code-type.unknown=\uC54C \uC218 \uC5C6\uB294 \uD655\uC778\uCF54\uB4DC \uD0C0\uC785\uC785\uB2C8\uB2E4.
 error.send-email.fail=\uC774\uBA54\uC77C \uC804\uC1A1\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4. \uB300\uC0C1=''{0}''
+error.email.already-exist=\uC774\uBBF8 \uAC00\uC785\uB41C \uC774\uBA54\uC77C\uC785\uB2C8\uB2E4.
+error.email-verification-code.incorrect=\uC798\uBABB\uB41C \uC778\uC99D\uBC88\uD638\uC785\uB2C8\uB2E4. \uD655\uC778 \uD6C4 \uB2E4\uC2DC \uC785\uB825\uD574 \uC8FC\uC138\uC694.
 
 notice.re-login.request=\uB85C\uADF8\uC778\uC774 \uD574\uC81C\uB418\uC5C8\uC2B5\uB2C8\uB2E4. \uB2E4\uC2DC \uB85C\uADF8\uC778\uD574\uC8FC\uC138\uC694.
 
