--- a/src/main/resources/messages_ja.properties
+++ b/src/main/resources/messages_ja.properties
@@ -5,6 +5,8 @@ error.password.incorrect=\u4E0D\u6B63\u78BA\u306A\u30D1\u30B9\u30EF\u30FC\u30C9\
 error.user-id-pw.incorrect=\u30E6\u30FC\u30B6\u30FCID\u307E\u305F\u306F\u30D1\u30B9\u30EF\u30FC\u30C9\u304C\u6B63\u3057\u304F\u3042\u308A\u307E\u305B\u3093\u3002
 error.verification-code-type.unknown=\u4E0D\u660E\u306A\u691C\u8A3C\u30B3\u30FC\u30C9\u30BF\u30A4\u30D7\u3067\u3059\u3002
 error.send-email.fail=\u96FB\u5B50\u30E1\u30FC\u30EB\u306E\u9001\u4FE1\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002 \u5BFE\u8C61=''{0}''
+error.email.already-exist=\u767B\u9332\u6E08\u307F\u306E\u30E1\u30FC\u30EB\u30A2\u30C9\u30EC\u30B9\u3067\u3059\u3002
+error.email-verification-code.incorrect=\u7121\u52B9\u306A\u8A8D\u8A3C\u756A\u53F7\u3067\u3059\u3002 \u78BA\u8A8D\u5F8C\u3001\u518D\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 
 notice.re-login.request=\u30ED\u30B0\u30A4\u30F3\u304C\u89E3\u9664\u3055\u308C\u307E\u3057\u305F\u3002 \u3082\u3046\u4E00\u5EA6\u30ED\u30B0\u30A4\u30F3\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 
