회원가입 로직 작성

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -7,15 +7,16 @@ error.verification-code-type.unknown=Unknown verification code type.
 error.send-email.fail=Email sending failed. target=''{0}''
 error.email.already-exist=This is an email that has already been signed up.
 error.email-verification-code.incorrect=Invalid authentication number. Please check and re-enter.
+error.pw-pw2.different=The password and password verification are different. Please check and enter again.
 
 notice.re-login.request=Login has been disabled. Please log in again.
 
 email.verification.subject=[TeamUp] Email authentication code
 email.verification.body=<h1>TeamUp Service Email Authentication Code</h1><p>Hello and welcome to join!</p><p>Please complete the e-mail authentication by entering the authentication coefficients below.</p><div style="font-size: 24px; font-weight: bold; color: #007bff; text-align: center; margin: 20px 0; padding: 10px; background-color: #f0f0f0; border-radius: 5px;">{0}</div><p>This code is only valid for {1} minutes. Please try more services after signing up.</p><p>Thank you.</p>
 
-constraint.user-name.pattern=The name can only be in Korean and must be 2 to 20 characters.
+constraint.user-name.pattern=The name can only be in Korean and must be 2 to 4 characters.
 constraint.user-phone.pattern=Invalid mobile phone number format.
 constraint.user-email.pattern=Invalid email format.
 constraint.user-id.pattern=The ID can only contain uppercase and lowercase letters, numbers, hyphens, and underscores, and must be 5 to 20 characters long.
-constraint.user-pw.pattern=Your password must contain at least one uppercase letter, lowercase letter, number, or special character and must be 8 to 30 characters long.
+constraint.user-pw.pattern=The password must be 8 to 20 characters, including at least one English, numeric, and special characters ($, @, !, %, *, #, ?, &).
 constraint.user-nickname.pattern=Nicknames can only contain uppercase and lowercase English letters, numbers, and Korean characters, and must be 2 to 10 characters long.
