--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,19 +2,24 @@ error.common.500=\uC77C\uC2DC\uC801\uC778 \uC624\uB958\uC785\uB2C8\uB2E4. \uC2DC
 error.common.401=\uC778\uC99D\uB418\uC9C0 \uC54A\uC740 \uC0AC\uC6A9\uC790\uC785\uB2C8\uB2E4. ip=''{0}'', uri=''{1}''
 error.common.403=\uD574\uB2F9 \uC790\uC6D0\uC5D0 \uC811\uADFC\uD560 \uAD8C\uD55C\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
 error.user-id-pw.incorrect=\uC0AC\uC6A9\uC790 \uC544\uC774\uB514 \uD639\uC740 \uD328\uC2A4\uC6CC\uB4DC\uAC00 \uC815\uD655\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
+error.user-id.incorrect=\uC874\uC7AC\uD558\uC9C0 \uC54A\uB294 \uC544\uC774\uB514\uC785\uB2C8\uB2E4.
 error.send-email.fail=\uC774\uBA54\uC77C \uC804\uC1A1\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4. \uB300\uC0C1=''{0}''
 error.email.already-exist=\uC774\uBBF8 \uAC00\uC785\uB41C \uC774\uBA54\uC77C\uC785\uB2C8\uB2E4.
 error.email-verification-code.incorrect=\uC798\uBABB\uB41C \uC778\uC99D\uBC88\uD638\uC785\uB2C8\uB2E4. \uD655\uC778 \uD6C4 \uB2E4\uC2DC \uC785\uB825\uD574 \uC8FC\uC138\uC694.
 error.pw-pw2.different=\uBE44\uBC00\uBC88\uD638\uC640 \uBE44\uBC00\uBC88\uD638 \uD655\uC778\uC774 \uB2E4\uB985\uB2C8\uB2E4. \uD655\uC778 \uD6C4 \uB2E4\uC2DC \uC785\uB825\uD574 \uC8FC\uC138\uC694.
+error.keypair.fail=RSA \uD0A4 \uC30D \uC0DD\uC131\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
+error.encrypt.fail=RSA \uC554\uD638\uD654\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
 
 notice.re-login.request=\uB85C\uADF8\uC778\uC774 \uD574\uC81C\uB418\uC5C8\uC2B5\uB2C8\uB2E4. \uB2E4\uC2DC \uB85C\uADF8\uC778\uD574\uC8FC\uC138\uC694.
 
 email.verification.subject=[TeamUp] \uC774\uBA54\uC77C \uC778\uC99D \uCF54\uB4DC\uC785\uB2C8\uB2E4
 email.verification.body=<h1>TeamUp \uC11C\uBE44\uC2A4 \uC774\uBA54\uC77C \uC778\uC99D \uCF54\uB4DC</h1><p>\uC548\uB155\uD558\uC138\uC694. \uD68C\uC6D0\uAC00\uC785\uC744 \uD658\uC601\uD569\uB2C8\uB2E4!</p><p>\uC544\uB798 \uC778\uC99D\uCF54\uB4E4\uB97C \uC785\uB825\uD558\uC5EC \uC774\uBA54\uC77C \uC778\uC99D\uC744 \uC644\uB8CC\uD574 \uC8FC\uC138\uC694.</p><div style="font-size: 24px; font-weight: bold; color: #007bff; text-align: center; margin: 20px 0; padding: 10px; background-color: #f0f0f0; border-radius: 5px;">{0}</div><p>\uC774 \uCF54\uB4DC\uB294 {1}\uBD84 \uB3D9\uC548\uB9CC \uC720\uD6A8\uD569\uB2C8\uB2E4. \uAC00\uC785 \uD6C4 \uB354 \uB9CE\uC740 \uC11C\uBE44\uC2A4\uB97C \uC774\uC6A9\uD574 \uBCF4\uC138\uC694.</p><p>\uAC10\uC0AC\uD569\uB2C8\uB2E4.</p>
+email.changePwd.subject=[TeamUp] \uBE44\uBC00\uBC88\uD638 \uC7AC\uC124\uC815 \uC694\uCCAD
+email.changePwd.body=<h1>TeamUp \uC11C\uBE44\uC2A4 \uBE44\uBC00\uBC88\uD638 \uC7AC\uC124\uC815 \uB9C1\uD06C</h1><p>\uC548\uB155\uD558\uC138\uC694. \uBE44\uBC00\uBC88\uD638 \uC7AC\uC124\uC815 \uB9C1\uD06C\uB97C \uBCF4\uB0B4\uB4DC\uB9BD\uB2C8\uB2E4.</p><p>\uC544\uB798 \uB9C1\uD06C\uB97C \uD1B5\uD574 \uBE44\uBC00\uBC88\uD638 \uC7AC\uC124\uC815\uC744 \uC9C4\uD589\uD574 \uC8FC\uC138\uC694.</p><div style="font-size: 24px; font-weight: bold; color: #007bff; text-align: center; margin: 20px 0; padding: 10px; background-color: #f0f0f0; border-radius: 5px;"><a href="{0}" target="_blank">\uBE44\uBC00\uBC88\uD638 \uBCC0\uACBD\uD558\uAE30</a></div><p>\uC774 \uB9C1\uD06C\uB294 {1}\uBD84 \uB3D9\uC548\uB9CC \uC720\uD6A8\uD569\uB2C8\uB2E4.</p><p>\uAC10\uC0AC\uD569\uB2C8\uB2E4.</p>
 
 constraint.user-name.pattern=\uC774\uB984\uC740 \uD55C\uAE00\uB9CC \uC0AC\uC6A9 \uAC00\uB2A5\uD558\uBA70 2 ~ 4 \uAE00\uC790\uC5EC\uC57C \uD569\uB2C8\uB2E4.
 constraint.user-phone.pattern=\uB9DE\uC9C0 \uC54A\uB294 \uD734\uB300\uD3F0 \uBC88\uD638 \uC591\uC2DD\uC785\uB2C8\uB2E4.
 constraint.user-email.pattern=\uB9DE\uC9C0 \uC54A\uB294 \uC774\uBA54\uC77C \uC591\uC2DD\uC785\uB2C8\uB2E4.
-constraint.user-id.pattern=\uC544\uC774\uB514\uB294 \uC601\uBB38 \uB300\uC18C\uBB38\uC790, \uC22B\uC790, \uD558\uC774\uD508, \uC5B8\uB354\uC2A4\uCF54\uC5B4\uB9CC \uC0AC\uC6A9 \uAC00\uB2A5\uD558\uBA70 5 ~ 20 \uAE00\uC790\uC5EC\uC57C \uD569\uB2C8\uB2E4.
+constraint.user-id.pattern=\uB9DE\uC9C0 \uC54A\uB294 \uC544\uC774\uB514 \uC591\uC2DD\uC785\uB2C8\uB2E4.
 constraint.user-pw.pattern=\uBE44\uBC00\uBC88\uD638\uB294 \uC801\uC5B4\uB3C4 \uD558\uB098\uC758 \uC601\uBB38, \uC22B\uC790, \uD2B9\uC218\uBB38\uC790($, @, !, %, *, #, ?, &)\uB97C \uD3EC\uD568\uD558\uC5EC 8 ~ 20 \uAE00\uC790\uC5EC\uC57C \uD569\uB2C8\uB2E4.
 constraint.user-nickname.pattern=\uB2C9\uB124\uC784\uC740 \uC601\uBB38 \uB300\uC18C\uBB38\uC790, \uC22B\uC790, \uD55C\uAE00\uB9CC \uC0AC\uC6A9 \uAC00\uB2A5\uD558\uBA70 2 ~ 10 \uAE00\uC790\uC5EC\uC57C \uD569\uB2C8\uB2E4.
