--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -2,19 +2,24 @@ error.common.500=This is a temporary error. If the issue is not resolved over ti
 error.common.401=Not authenticated user. ip=''{0}'', uri=''{1}''
 error.common.403=If applicable, you do not have permission to access it.
 error.user-id-pw.incorrect=Your user ID or password is incorrect.
+error.user-id.incorrect=This ID does not exist.
 error.send-email.fail=Email sending failed. target=''{0}''
 error.email.already-exist=This is an email that has already been signed up.
 error.email-verification-code.incorrect=Invalid authentication number. Please check and re-enter.
 error.pw-pw2.different=The password and password verification are different. Please check and enter again.
+error.keypair.fail=RSA key pair generation failed.
+error.encrypt.fail=RSA encryption failed.
 
 notice.re-login.request=Login has been disabled. Please log in again.
 
 email.verification.subject=[TeamUp] Email authentication code
 email.verification.body=<h1>TeamUp Service Email Authentication Code</h1><p>Hello and welcome to join!</p><p>Please complete the e-mail authentication by entering the authentication coefficients below.</p><div style="font-size: 24px; font-weight: bold; color: #007bff; text-align: center; margin: 20px 0; padding: 10px; background-color: #f0f0f0; border-radius: 5px;">{0}</div><p>This code is only valid for {1} minutes. Please try more services after signing up.</p><p>Thank you.</p>
+email.changePwd.subject=[TeamUp] Request password reset
+email.changePwd.body=<h1>TeamUp service password reset link</h1><p>Hello, I am sending you a link to reset your password.</p><p>Please proceed with the password reset through the link below.</p><div style="font-size: 24px; font-weight: bold; color: #007bff; text-align: center; margin: 20px 0; padding: 10px; background-color: #f0f0f0; border-radius: 5px;"><a href="{0}" target="_blank">Change the password</a></div><p>This link is only valid for {1} minutes.</p><p>Thank you.</p>
 
 constraint.user-name.pattern=The name can only be in Korean and must be 2 to 4 characters.
 constraint.user-phone.pattern=Invalid mobile phone number format.
 constraint.user-email.pattern=Invalid email format.
-constraint.user-id.pattern=The ID can only contain uppercase and lowercase letters, numbers, hyphens, and underscores, and must be 5 to 20 characters long.
+constraint.user-id.pattern=Invalid ID format.
 constraint.user-pw.pattern=The password must be 8 to 20 characters, including at least one English, numeric, and special characters ($, @, !, %, *, #, ?, &).
 constraint.user-nickname.pattern=Nicknames can only contain uppercase and lowercase English letters, numbers, and Korean characters, and must be 2 to 10 characters long.
