비밀번호 변경 로직 추가

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -9,6 +9,8 @@ error.email-verification-code.incorrect=Invalid authentication number. Please ch
 error.pw-pw2.different=The password and password verification are different. Please check and enter again.
 error.keypair.fail=RSA key pair generation failed.
 error.encrypt.fail=RSA encryption failed.
+error.decrypt.fail=RSA decryption failed.
+error.change-pw.bad-url=Request to change the password from an abnormal URL.
 
 notice.re-login.request=Login has been disabled. Please log in again.
 
