--- a/src/main/resources/messages_ja.properties
+++ b/src/main/resources/messages_ja.properties
@@ -9,6 +9,8 @@ error.email-verification-code.incorrect=\u7121\u52B9\u306A\u8A8D\u8A3C\u756A\u53
 error.pw-pw2.different=\u30D1\u30B9\u30EF\u30FC\u30C9\u3068\u30D1\u30B9\u30EF\u30FC\u30C9\u306E\u78BA\u8A8D\u304C\u7570\u306A\u308A\u307E\u3059\u3002 \u78BA\u8A8D\u5F8C\u3001\u518D\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 error.keypair.fail=RSA \u30AD\u30FC\u30DA\u30A2\u306E\u4F5C\u6210\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002
 error.encrypt.fail=RSA\u6697\u53F7\u5316\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002
+error.decrypt.fail=RSA\u5FA9\u53F7\u5316\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002
+error.change-pw.bad-url=\u7570\u5E38\u306AURL\u304B\u3089\u6765\u305F\u30D1\u30B9\u30EF\u30FC\u30C9\u5909\u66F4\u8981\u8ACB\u3067\u3059\u3002
 
 notice.re-login.request=\u30ED\u30B0\u30A4\u30F3\u304C\u89E3\u9664\u3055\u308C\u307E\u3057\u305F\u3002 \u3082\u3046\u4E00\u5EA6\u30ED\u30B0\u30A4\u30F3\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 
