--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,6 +11,7 @@ error.keypair.fail=RSA \uD0A4 \uC30D \uC0DD\uC131\uC5D0 \uC2E4\uD328\uD588\uC2B5
 error.encrypt.fail=RSA \uC554\uD638\uD654\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
 error.decrypt.fail=RSA \uBCF5\uD638\uD654\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
 error.change-pw.bad-url=\uBE44\uC815\uC0C1\uC801\uC778 URL\uC744 \uD1B5\uD574 \uC628 \uBE44\uBC00\uBC88\uD638 \uBCC0\uACBD \uC694\uCCAD\uC785\uB2C8\uB2E4.
+error.file.not-exist=\uD30C\uC77C\uC774 \uC874\uC7AC\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 
 notice.re-login.request=\uB85C\uADF8\uC778\uC774 \uD574\uC81C\uB418\uC5C8\uC2B5\uB2C8\uB2E4. \uB2E4\uC2DC \uB85C\uADF8\uC778\uD574\uC8FC\uC138\uC694.
 
