--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -5,6 +5,9 @@ error.user-id-pw.incorrect=Your user ID or password is incorrect.
 error.user-id.incorrect=This ID does not exist.
 error.send-email.fail=Email sending failed. target=''{0}''
 error.email.already-exist=This is an email that has already been signed up.
+error.nickname.already-exist=This nickname already exists.
+error.date.not-exist=\uC874\uC7AC\uD558\uC9C0 \uC54A\uB294 \uB0A0\uC9DC\uC785\uB2C8\uB2E4. \uD655\uC778 \uD6C4 \uB2E4\uC2DC \uC785\uB825\uD574 \uC8FC\uC138\uC694.
+error.age.too-young={0}\uC138 \uBD80\uD130 \uC11C\uBE44\uC2A4\uB97C \uC0AC\uC6A9\uD560 \uC218 \uC788\uC2B5\uB2C8\uB2E4.
 error.email-verification-code.incorrect=Invalid authentication number. Please check and re-enter.
 error.pw-pw2.different=The password and password verification are different. Please check and enter again.
 error.keypair.fail=RSA key pair generation failed.
@@ -23,5 +26,5 @@ constraint.user-name.pattern=The name can only be in Korean and must be 2 to 4 c
 constraint.user-phone.pattern=Invalid mobile phone number format.
 constraint.user-email.pattern=Invalid email format.
 constraint.user-id.pattern=Invalid ID format.
+constraint.user-nickname.pattern=Invalid Nickname format.
 constraint.user-pw.pattern=The password must be 8 to 20 characters, including at least one English, numeric, and special characters ($, @, !, %, *, #, ?, &).
-constraint.user-nickname.pattern=Nicknames can only contain uppercase and lowercase English letters, numbers, and Korean characters, and must be 2 to 10 characters long.
