--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,6 +5,9 @@ error.user-id-pw.incorrect=\uC0AC\uC6A9\uC790 \uC544\uC774\uB514 \uD639\uC740 \u
 error.user-id.incorrect=\uC874\uC7AC\uD558\uC9C0 \uC54A\uB294 \uC544\uC774\uB514\uC785\uB2C8\uB2E4.
 error.send-email.fail=\uC774\uBA54\uC77C \uC804\uC1A1\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4. \uB300\uC0C1=''{0}''
 error.email.already-exist=\uC774\uBBF8 \uAC00\uC785\uB41C \uC774\uBA54\uC77C\uC785\uB2C8\uB2E4.
+error.nickname.already-exist=\uC774\uBBF8 \uC874\uC7AC\uD558\uB294 \uB2C9\uB124\uC784\uC785\uB2C8\uB2E4.
+error.date.not-exist=\uC874\uC7AC\uD558\uC9C0 \uC54A\uB294 \uB0A0\uC9DC\uC785\uB2C8\uB2E4. \uD655\uC778 \uD6C4 \uB2E4\uC2DC \uC785\uB825\uD574 \uC8FC\uC138\uC694.
+error.age.too-young={0}\uC138 \uBD80\uD130 \uC11C\uBE44\uC2A4\uB97C \uC0AC\uC6A9\uD560 \uC218 \uC788\uC2B5\uB2C8\uB2E4.
 error.email-verification-code.incorrect=\uC798\uBABB\uB41C \uC778\uC99D\uBC88\uD638\uC785\uB2C8\uB2E4. \uD655\uC778 \uD6C4 \uB2E4\uC2DC \uC785\uB825\uD574 \uC8FC\uC138\uC694.
 error.pw-pw2.different=\uBE44\uBC00\uBC88\uD638\uC640 \uBE44\uBC00\uBC88\uD638 \uD655\uC778\uC774 \uB2E4\uB985\uB2C8\uB2E4. \uD655\uC778 \uD6C4 \uB2E4\uC2DC \uC785\uB825\uD574 \uC8FC\uC138\uC694.
 error.keypair.fail=RSA \uD0A4 \uC30D \uC0DD\uC131\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
@@ -23,5 +26,5 @@ constraint.user-name.pattern=\uC774\uB984\uC740 \uD55C\uAE00\uB9CC \uC0AC\uC6A9 
 constraint.user-phone.pattern=\uB9DE\uC9C0 \uC54A\uB294 \uD734\uB300\uD3F0 \uBC88\uD638 \uC591\uC2DD\uC785\uB2C8\uB2E4.
 constraint.user-email.pattern=\uB9DE\uC9C0 \uC54A\uB294 \uC774\uBA54\uC77C \uC591\uC2DD\uC785\uB2C8\uB2E4.
 constraint.user-id.pattern=\uB9DE\uC9C0 \uC54A\uB294 \uC544\uC774\uB514 \uC591\uC2DD\uC785\uB2C8\uB2E4.
+constraint.user-nickname.pattern=\uB9DE\uC9C0 \uC54A\uB294 \uB2C9\uB124\uC784 \uC591\uC2DD\uC785\uB2C8\uB2E4.
 constraint.user-pw.pattern=\uBE44\uBC00\uBC88\uD638\uB294 \uC801\uC5B4\uB3C4 \uD558\uB098\uC758 \uC601\uBB38, \uC22B\uC790, \uD2B9\uC218\uBB38\uC790($, @, !, %, *, #, ?, &)\uB97C \uD3EC\uD568\uD558\uC5EC 8 ~ 20 \uAE00\uC790\uC5EC\uC57C \uD569\uB2C8\uB2E4.
-constraint.user-nickname.pattern=\uB2C9\uB124\uC784\uC740 \uC601\uBB38 \uB300\uC18C\uBB38\uC790, \uC22B\uC790, \uD55C\uAE00\uB9CC \uC0AC\uC6A9 \uAC00\uB2A5\uD558\uBA70 2 ~ 10 \uAE00\uC790\uC5EC\uC57C \uD569\uB2C8\uB2E4.
