--- a/src/main/resources/messages_ja.properties
+++ b/src/main/resources/messages_ja.properties
@@ -5,6 +5,9 @@ error.user-id-pw.incorrect=\u30E6\u30FC\u30B6\u30FCID\u307E\u305F\u306F\u30D1\u3
 error.user-id.incorrect=\u5B58\u5728\u3057\u306A\u3044ID\u3067\u3059\u3002
 error.send-email.fail=\u96FB\u5B50\u30E1\u30FC\u30EB\u306E\u9001\u4FE1\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002 \u5BFE\u8C61=''{0}''
 error.email.already-exist=\u767B\u9332\u6E08\u307F\u306E\u30E1\u30FC\u30EB\u30A2\u30C9\u30EC\u30B9\u3067\u3059\u3002
+error.nickname.already-exist=\u65E2\u306B\u5B58\u5728\u3059\u308B\u30CB\u30C3\u30AF\u30CD\u30FC\u30E0\u3067\u3059\u3002
+error.date.not-exist=\uC874\uC7AC\uD558\uC9C0 \uC54A\uB294 \uB0A0\uC9DC\uC785\uB2C8\uB2E4. \uD655\uC778 \uD6C4 \uB2E4\uC2DC \uC785\uB825\uD574 \uC8FC\uC138\uC694.
+error.age.too-young={0}\uC138 \uBD80\uD130 \uC11C\uBE44\uC2A4\uB97C \uC0AC\uC6A9\uD560 \uC218 \uC788\uC2B5\uB2C8\uB2E4.
 error.email-verification-code.incorrect=\u7121\u52B9\u306A\u8A8D\u8A3C\u756A\u53F7\u3067\u3059\u3002 \u78BA\u8A8D\u5F8C\u3001\u518D\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 error.pw-pw2.different=\u30D1\u30B9\u30EF\u30FC\u30C9\u3068\u30D1\u30B9\u30EF\u30FC\u30C9\u306E\u78BA\u8A8D\u304C\u7570\u306A\u308A\u307E\u3059\u3002 \u78BA\u8A8D\u5F8C\u3001\u518D\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 error.keypair.fail=RSA \u30AD\u30FC\u30DA\u30A2\u306E\u4F5C\u6210\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002
@@ -23,5 +26,5 @@ constraint.user-name.pattern=\u540D\u524D\u306F\u30CF\u30F3\u30B0\u30EB\u306E\u3
 constraint.user-phone.pattern=\u7121\u52B9\u306A\u643A\u5E2F\u96FB\u8A71\u756A\u53F7\u30D5\u30A9\u30FC\u30E0\u3067\u3059\u3002
 constraint.user-email.pattern=\u7121\u52B9\u306A\u96FB\u5B50\u30E1\u30FC\u30EB \u30D5\u30A9\u30FC\u30E0\u3067\u3059\u3002
 constraint.user-id.pattern=\u7121\u52B9\u306AID \u30D5\u30A9\u30FC\u30E0\u3067\u3059\u3002
+constraint.user-nickname.pattern=\u7121\u52B9\u306A\u30CB\u30C3\u30AF\u30CD\u30FC\u30E0\u30D5\u30A9\u30FC\u30E0\u3067\u3059\u3002
 constraint.user-pw.pattern=\u30D1\u30B9\u30EF\u30FC\u30C9\u306F\u3001\u5C11\u306A\u304F\u3068\u30821\u3064\u306E\u82F1\u6570\u5B57\u3001\u7279\u6B8A\u6587\u5B57($\u3001@\u3001!\u3001%\u3001*\u3001#\u3001?,&)\u3092\u542B\u3081\u30668~20\u6587\u5B57\u3067\u306A\u3051\u308C\u3070\u306A\u308A\u307E\u305B\u3093\u3002
-constraint.user-nickname.pattern=\u30CB\u30C3\u30AF\u30CD\u30FC\u30E0\u306F\u82F1\u8A9E\u306E\u5927\u6587\u5B57\u3068\u5C0F\u6587\u5B57\u3001\u6570\u5B57\u3001\u30CF\u30F3\u30B0\u30EB\u306E\u307F\u4F7F\u7528\u3067\u304D\u30012~10\u6587\u5B57\u3067\u306A\u3051\u308C\u3070\u306A\u308A\u307E\u305B\u3093\u3002
