--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,10 +5,12 @@ error.user-id-pw.incorrect=\uC0AC\uC6A9\uC790 \uC544\uC774\uB514 \uD639\uC740 \u
 error.user-id.incorrect=\uC874\uC7AC\uD558\uC9C0 \uC54A\uB294 \uC544\uC774\uB514\uC785\uB2C8\uB2E4.
 error.send-email.fail=\uC774\uBA54\uC77C \uC804\uC1A1\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4. \uB300\uC0C1=''{0}''
 error.email.already-exist=\uC774\uBBF8 \uAC00\uC785\uB41C \uC774\uBA54\uC77C\uC785\uB2C8\uB2E4.
+error.phone.already-exist=\uC774\uBBF8 \uAC00\uC785\uB41C \uC804\uD654\uBC88\uD638\uC785\uB2C8\uB2E4.
 error.nickname.already-exist=\uC774\uBBF8 \uC874\uC7AC\uD558\uB294 \uB2C9\uB124\uC784\uC785\uB2C8\uB2E4.
 error.date.not-exist=\uC874\uC7AC\uD558\uC9C0 \uC54A\uB294 \uB0A0\uC9DC\uC785\uB2C8\uB2E4. \uD655\uC778 \uD6C4 \uB2E4\uC2DC \uC785\uB825\uD574 \uC8FC\uC138\uC694.
 error.age.too-young={0}\uC138 \uBD80\uD130 \uC11C\uBE44\uC2A4\uB97C \uC0AC\uC6A9\uD560 \uC218 \uC788\uC2B5\uB2C8\uB2E4.
 error.email-verification-code.incorrect=\uC798\uBABB\uB41C \uC778\uC99D\uBC88\uD638\uC785\uB2C8\uB2E4. \uD655\uC778 \uD6C4 \uB2E4\uC2DC \uC785\uB825\uD574 \uC8FC\uC138\uC694.
+error.phone-verification-code.incorrect=\uC798\uBABB\uB41C \uC778\uC99D\uBC88\uD638\uC785\uB2C8\uB2E4. \uD655\uC778 \uD6C4 \uB2E4\uC2DC \uC785\uB825\uD574 \uC8FC\uC138\uC694.
 error.pw-pw2.different=\uBE44\uBC00\uBC88\uD638\uC640 \uBE44\uBC00\uBC88\uD638 \uD655\uC778\uC774 \uB2E4\uB985\uB2C8\uB2E4. \uD655\uC778 \uD6C4 \uB2E4\uC2DC \uC785\uB825\uD574 \uC8FC\uC138\uC694.
 error.keypair.fail=RSA \uD0A4 \uC30D \uC0DD\uC131\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
 error.encrypt.fail=RSA \uC554\uD638\uD654\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
@@ -22,6 +24,7 @@ email.verification.subject=[TeamUp] \uC774\uBA54\uC77C \uC778\uC99D \uCF54\uB4DC
 email.verification.body=<h1>TeamUp \uC11C\uBE44\uC2A4 \uC774\uBA54\uC77C \uC778\uC99D \uCF54\uB4DC</h1><p>\uC548\uB155\uD558\uC138\uC694. \uD68C\uC6D0\uAC00\uC785\uC744 \uD658\uC601\uD569\uB2C8\uB2E4!</p><p>\uC544\uB798 \uC778\uC99D\uCF54\uB4E4\uB97C \uC785\uB825\uD558\uC5EC \uC774\uBA54\uC77C \uC778\uC99D\uC744 \uC644\uB8CC\uD574 \uC8FC\uC138\uC694.</p><div style="font-size: 24px; font-weight: bold; color: #007bff; text-align: center; margin: 20px 0; padding: 10px; background-color: #f0f0f0; border-radius: 5px;">{0}</div><p>\uC774 \uCF54\uB4DC\uB294 {1}\uBD84 \uB3D9\uC548\uB9CC \uC720\uD6A8\uD569\uB2C8\uB2E4. \uAC00\uC785 \uD6C4 \uB354 \uB9CE\uC740 \uC11C\uBE44\uC2A4\uB97C \uC774\uC6A9\uD574 \uBCF4\uC138\uC694.</p><p>\uAC10\uC0AC\uD569\uB2C8\uB2E4.</p>
 email.changePwd.subject=[TeamUp] \uBE44\uBC00\uBC88\uD638 \uC7AC\uC124\uC815 \uC694\uCCAD
 email.changePwd.body=<h1>TeamUp \uC11C\uBE44\uC2A4 \uBE44\uBC00\uBC88\uD638 \uC7AC\uC124\uC815 \uB9C1\uD06C</h1><p>\uC548\uB155\uD558\uC138\uC694. \uBE44\uBC00\uBC88\uD638 \uC7AC\uC124\uC815 \uB9C1\uD06C\uB97C \uBCF4\uB0B4\uB4DC\uB9BD\uB2C8\uB2E4.</p><p>\uC544\uB798 \uB9C1\uD06C\uB97C \uD1B5\uD574 \uBE44\uBC00\uBC88\uD638 \uC7AC\uC124\uC815\uC744 \uC9C4\uD589\uD574 \uC8FC\uC138\uC694.</p><div style="font-size: 24px; font-weight: bold; color: #007bff; text-align: center; margin: 20px 0; padding: 10px; background-color: #f0f0f0; border-radius: 5px;"><a href="{0}" target="_blank">\uBE44\uBC00\uBC88\uD638 \uBCC0\uACBD\uD558\uAE30</a></div><p>\uC774 \uB9C1\uD06C\uB294 {1}\uBD84 \uB3D9\uC548\uB9CC \uC720\uD6A8\uD569\uB2C8\uB2E4.</p><p>\uAC10\uC0AC\uD569\uB2C8\uB2E4.</p>
+phone.verification.body=TeamUp\uC5D0\uC11C \uBCF4\uB0B8 \uD734\uB300\uC804\uD654 \uC778\uC99D\uBC88\uD638[{0}]\uC785\uB2C8\uB2E4.
 
 constraint.user-name.pattern=\uC774\uB984\uC740 \uD55C\uAE00\uB9CC \uC0AC\uC6A9 \uAC00\uB2A5\uD558\uBA70 2 ~ 4 \uAE00\uC790\uC5EC\uC57C \uD569\uB2C8\uB2E4.
 constraint.user-phone.pattern=\uB9DE\uC9C0 \uC54A\uB294 \uD734\uB300\uD3F0 \uBC88\uD638 \uC591\uC2DD\uC785\uB2C8\uB2E4.
