--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,6 +4,7 @@ error.common.403=\uD574\uB2F9 \uC790\uC6D0\uC5D0 \uC811\uADFC\uD560 \uAD8C\uD55C
 error.user-id-pw.incorrect=\uC0AC\uC6A9\uC790 \uC544\uC774\uB514 \uD639\uC740 \uD328\uC2A4\uC6CC\uB4DC\uAC00 \uC815\uD655\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 error.user-id.incorrect=\uC874\uC7AC\uD558\uC9C0 \uC54A\uB294 \uC544\uC774\uB514\uC785\uB2C8\uB2E4.
 error.send-email.fail=\uC774\uBA54\uC77C \uC804\uC1A1\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4. \uB300\uC0C1=''{0}''
+error.send-sms.fail=SMS \uC804\uC1A1\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4. \uB300\uC0C1=''{0}''
 error.email.already-exist=\uC774\uBBF8 \uAC00\uC785\uB41C \uC774\uBA54\uC77C\uC785\uB2C8\uB2E4.
 error.phone.already-exist=\uC774\uBBF8 \uAC00\uC785\uB41C \uC804\uD654\uBC88\uD638\uC785\uB2C8\uB2E4.
 error.nickname.already-exist=\uC774\uBBF8 \uC874\uC7AC\uD558\uB294 \uB2C9\uB124\uC784\uC785\uB2C8\uB2E4.
