--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -4,11 +4,12 @@ error.common.403=If applicable, you do not have permission to access it.
 error.user-id-pw.incorrect=Your user ID or password is incorrect.
 error.user-id.incorrect=This ID does not exist.
 error.send-email.fail=Email sending failed. target=''{0}''
+error.send-sms.fail=SMS sending failed. target=''{0}''
 error.email.already-exist=This is an email that has already been signed up.
-error.phone.already-exist=\uC774\uBBF8 \uAC00\uC785\uB41C \uC804\uD654\uBC88\uD638\uC785\uB2C8\uB2E4.
+error.phone.already-exist=This is an phone number that has already been signed up.
 error.nickname.already-exist=This nickname already exists.
-error.date.not-exist=\uC874\uC7AC\uD558\uC9C0 \uC54A\uB294 \uB0A0\uC9DC\uC785\uB2C8\uB2E4. \uD655\uC778 \uD6C4 \uB2E4\uC2DC \uC785\uB825\uD574 \uC8FC\uC138\uC694.
-error.age.too-young={0}\uC138 \uBD80\uD130 \uC11C\uBE44\uC2A4\uB97C \uC0AC\uC6A9\uD560 \uC218 \uC788\uC2B5\uB2C8\uB2E4.
+error.date.not-exist=The date does not exist. Please check and re-enter.
+error.age.too-young=You can use the service from the age of {0}
 error.email-verification-code.incorrect=Invalid authentication number. Please check and re-enter.
 error.phone-verification-code.incorrect=Invalid authentication number. Please check and re-enter.
 error.pw-pw2.different=The password and password verification are different. Please check and enter again.
@@ -24,7 +25,7 @@ email.verification.subject=[TeamUp] Email authentication code
 email.verification.body=<h1>TeamUp Service Email Authentication Code</h1><p>Hello and welcome to join!</p><p>Please complete the e-mail authentication by entering the authentication coefficients below.</p><div style="font-size: 24px; font-weight: bold; color: #007bff; text-align: center; margin: 20px 0; padding: 10px; background-color: #f0f0f0; border-radius: 5px;">{0}</div><p>This code is only valid for {1} minutes. Please try more services after signing up.</p><p>Thank you.</p>
 email.changePwd.subject=[TeamUp] Request password reset
 email.changePwd.body=<h1>TeamUp service password reset link</h1><p>Hello, I am sending you a link to reset your password.</p><p>Please proceed with the password reset through the link below.</p><div style="font-size: 24px; font-weight: bold; color: #007bff; text-align: center; margin: 20px 0; padding: 10px; background-color: #f0f0f0; border-radius: 5px;"><a href="{0}" target="_blank">Change the password</a></div><p>This link is only valid for {1} minutes.</p><p>Thank you.</p>
-phone.verification.body=TeamUp\uC5D0\uC11C \uBCF4\uB0B8 \uD734\uB300\uC804\uD654 \uC778\uC99D\uBC88\uD638[{0}]\uC785\uB2C8\uB2E4.
+phone.verification.body=This is the mobile phone verification number [{0}] sent by TeamUp.
 
 constraint.user-name.pattern=The name can only be in Korean and must be 2 to 4 characters.
 constraint.user-phone.pattern=Invalid mobile phone number format.
