--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -12,10 +12,10 @@ error.date.not-exist=The date does not exist. Please check and re-enter.
 error.age.too-young=You can use the service from the age of {0}
 error.email-verification-code.incorrect=Invalid authentication number. Please check and re-enter.
 error.phone-verification-code.incorrect=Invalid authentication number. Please check and re-enter.
-error.file-size.not-proper={}MB ~ {}MB \uC0AC\uC774\uC758 \uD30C\uC77C\uB9CC \uC5C5\uB85C\uB4DC \uAC00\uB2A5\uD569\uB2C8\uB2E4.
-error.file.empty=\uD30C\uC77C\uC744 \uC5C5\uB85C\uB4DC \uD574\uC8FC\uC138\uC694.
-error.file-extension-not-proper=\uC9C0\uC6D0\uD558\uC9C0 \uC54A\uB294 \uD30C\uC77C \uD655\uC7A5\uC790\uC785\uB2C8\uB2E4. \uC9C0\uC6D0 \uD655\uC7A5\uC790={}
-error.create-file.fail=\uD30C\uC77C \uC0DD\uC131\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
+error.file-size.not-proper=Only files between {0}MB ~ {1}MB can be uploaded.
+error.file.empty=Please upload the file.
+error.file-extension-not-proper=Unsupported file extension. Supported extension={0}
+error.create-file.fail=File creation failed.
 error.pw-pw2.different=The password and password verification are different. Please check and enter again.
 error.keypair.fail=RSA key pair generation failed.
 error.encrypt.fail=RSA encryption failed.
