--- a/src/main/resources/messages_ja.properties
+++ b/src/main/resources/messages_ja.properties
@@ -12,10 +12,10 @@ error.date.not-exist=\u5B58\u5728\u3057\u306A\u3044\u65E5\u4ED8\u3067\u3059\u300
 error.age.too-young={0}\u6B73\u304B\u3089\u30B5\u30FC\u30D3\u30B9\u3092\u3054\u5229\u7528\u3044\u305F\u3060\u3051\u307E\u3059\u3002
 error.email-verification-code.incorrect=\u7121\u52B9\u306A\u8A8D\u8A3C\u756A\u53F7\u3067\u3059\u3002 \u78BA\u8A8D\u5F8C\u3001\u518D\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 error.phone-verification-code.incorrect=\u7121\u52B9\u306A\u8A8D\u8A3C\u756A\u53F7\u3067\u3059\u3002 \u78BA\u8A8D\u5F8C\u3001\u518D\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
-error.file-size.not-proper={}MB ~ {}MB \uC0AC\uC774\uC758 \uD30C\uC77C\uB9CC \uC5C5\uB85C\uB4DC \uAC00\uB2A5\uD569\uB2C8\uB2E4.
-error.file.empty=\uD30C\uC77C\uC744 \uC5C5\uB85C\uB4DC \uD574\uC8FC\uC138\uC694.
-error.file-extension-not-proper=\uC9C0\uC6D0\uD558\uC9C0 \uC54A\uB294 \uD30C\uC77C \uD655\uC7A5\uC790\uC785\uB2C8\uB2E4. \uC9C0\uC6D0 \uD655\uC7A5\uC790={}
-error.create-file.fail=\uD30C\uC77C \uC0DD\uC131\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
+error.file-size.not-proper={0}MB ~ {1}MB \u306E\u9593\u306E\u30D5\u30A1\u30A4\u30EB\u306E\u307F\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9\u53EF\u80FD\u3067\u3059\u3002
+error.file.empty=\u30D5\u30A1\u30A4\u30EB\u3092\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9\u3057\u3066\u304F\u3060\u3055\u3044\u3002
+error.file-extension-not-proper=\u30B5\u30DD\u30FC\u30C8\u3055\u308C\u3066\u3044\u306A\u3044\u30D5\u30A1\u30A4\u30EB\u62E1\u5F35\u5B50\u3067\u3059\u3002 \u30B5\u30DD\u30FC\u30C8\u62E1\u5F35\u5B50={0}
+error.create-file.fail=\u30D5\u30A1\u30A4\u30EB\u306E\u4F5C\u6210\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002
 error.pw-pw2.different=\u30D1\u30B9\u30EF\u30FC\u30C9\u3068\u30D1\u30B9\u30EF\u30FC\u30C9\u306E\u78BA\u8A8D\u304C\u7570\u306A\u308A\u307E\u3059\u3002 \u78BA\u8A8D\u5F8C\u3001\u518D\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 error.keypair.fail=RSA \u30AD\u30FC\u30DA\u30A2\u306E\u4F5C\u6210\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002
 error.encrypt.fail=RSA\u6697\u53F7\u5316\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002
