--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -15,7 +15,7 @@ error.phone-verification-code.incorrect=Invalid authentication number. Please ch
 error.file-size.not-proper=Only files between {0}MB ~ {1}MB can be uploaded.
 error.file.empty=Please upload the file.
 error.file-extension-not-proper=Unsupported file extension. Supported extension={0}
-error.create-file.fail=File creation failed.
+error.change-profile-image.fail=Failed to change profile image.
 error.pw-pw2.different=The password and password verification are different. Please check and enter again.
 error.keypair.fail=RSA key pair generation failed.
 error.encrypt.fail=RSA encryption failed.
