--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -17,6 +17,8 @@ error.file.empty=Please upload the file.
 error.file-extension-not-proper=Unsupported file extension. Supported extension={0}
 error.change-profile-image.fail=Failed to change profile image.
 error.pw-pw2.different=The password and password verification are different. Please check and enter again.
+error.pw.already-using=You cannot change the password to the same password you were previously using.
+error.user-pw.incorrect=It is different from your existing password. Please check and request again.
 error.keypair.fail=RSA key pair generation failed.
 error.encrypt.fail=RSA encryption failed.
 error.decrypt.fail=RSA decryption failed.
