--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,6 +17,8 @@ error.file.empty=\uD30C\uC77C\uC744 \uC5C5\uB85C\uB4DC \uD574\uC8FC\uC138\uC694.
 error.file-extension-not-proper=\uC9C0\uC6D0\uD558\uC9C0 \uC54A\uB294 \uD30C\uC77C \uD655\uC7A5\uC790\uC785\uB2C8\uB2E4. \uC9C0\uC6D0 \uD655\uC7A5\uC790={0}
 error.change-profile-image.fail=\uD504\uB85C\uD544 \uC774\uBBF8\uC9C0 \uBCC0\uACBD\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
 error.pw-pw2.different=\uBE44\uBC00\uBC88\uD638\uC640 \uBE44\uBC00\uBC88\uD638 \uD655\uC778\uC774 \uB2E4\uB985\uB2C8\uB2E4. \uD655\uC778 \uD6C4 \uB2E4\uC2DC \uC785\uB825\uD574 \uC8FC\uC138\uC694.
+error.pw.already-using=\uAE30\uC874\uC5D0 \uC0AC\uC6A9\uD558\uB358 \uBE44\uBC00\uBC88\uD638\uC640 \uB3D9\uC77C\uD55C \uBE44\uBC00\uBC88\uD638\uB85C \uBCC0\uACBD\uD560 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
+error.user-pw.incorrect=\uAE30\uC874 \uBE44\uBC00\uBC88\uD638\uC640 \uB2E4\uB985\uB2C8\uB2E4. \uD655\uC778 \uD6C4 \uB2E4\uC2DC \uC694\uCCAD\uD574 \uC8FC\uC138\uC694.
 error.keypair.fail=RSA \uD0A4 \uC30D \uC0DD\uC131\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
 error.encrypt.fail=RSA \uC554\uD638\uD654\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
 error.decrypt.fail=RSA \uBCF5\uD638\uD654\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
