--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -24,6 +24,20 @@ error.encrypt.fail=RSA encryption failed.
 error.decrypt.fail=RSA decryption failed.
 error.change-pw.bad-url=Request to change the password from an abnormal URL.
 error.file.not-exist=The file does not exist.
+error.introduction.max-size=Self-introduction can contain up to {0} characters.
+error.skill.max-size=You can enter up to {0} characters for your skills.
+error.experience.max-size=Experience can be entered up to {0} characters long.
+error.additional-info.max-size=Additional information can be entered up to {0} characters long.
+error.project-url.max-size=Each project URL can contain up to {0} characters.
+error.project-urls.max-size=Up to {0} project URLs can be entered.
+error.certificate.max-size=Each certificate can contain up to {0} characters.
+error.certificates.max-size=Up to {0} certifications can be entered.
+error.language-grade.max-size=Up to {0} language levels can be entered.
+error.language-grade.pattern=Invalid language level. Please enter an integer between {0} and {1}.
+error.any.size=Shorter than the minimum input length or longer than the maximum input length.
+error.list.size=Less than the minimum number of inputs or more than the maximum number of inputs.
+error.map.size=Less than the minimum number of inputs or more than the maximum number of inputs.
+error.map.pattern=This is not an appropriate format.
 
 notice.re-login.request=Login has been disabled. Please log in again.
 notice.deleted-user=This user has been requested to be deleted. If you would like to cancel your deletion request, please contact customer service.
