이력서 열람 API 개발

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -38,6 +38,7 @@ error.any.size=\uCD5C\uC18C \uC785\uB825 \uAE38\uC774\uBCF4\uB2E4 \uC9E7\uAC70\u
 error.list.size=\uCD5C\uC18C \uC785\uB825 \uAC1C\uC218\uBCF4\uB2E4 \uC801\uAC8C\uAC70\uB098 \uCD5C\uB300 \uC785\uB825 \uAC1C\uC218\uBCF4\uB2E4 \uB9CE\uC2B5\uB2C8\uB2E4.
 error.map.size=\uCD5C\uC18C \uC785\uB825 \uAC1C\uC218\uBCF4\uB2E4 \uC801\uAC8C\uAC70\uB098 \uCD5C\uB300 \uC785\uB825 \uAC1C\uC218\uBCF4\uB2E4 \uB9CE\uC2B5\uB2C8\uB2E4.
 error.map.pattern=\uC801\uC808\uD558\uC9C0 \uC54A\uC740 \uC591\uC2DD\uC785\uB2C8\uB2E4.
+error.resume.not-found=\uC774\uB825\uC11C\uAC00 \uC874\uC7AC\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 
 notice.re-login.request=\uB85C\uADF8\uC778\uC774 \uD574\uC81C\uB418\uC5C8\uC2B5\uB2C8\uB2E4. \uB2E4\uC2DC \uB85C\uADF8\uC778\uD574\uC8FC\uC138\uC694.
 notice.deleted-user=\uC0AD\uC81C \uC694\uCCAD\uB41C \uC0AC\uC6A9\uC790\uC785\uB2C8\uB2E4. \uC0AD\uC81C \uC694\uCCAD \uCDE8\uC18C\uB97C \uD558\uACE0 \uC2F6\uB2E4\uBA74 \uACE0\uAC1D\uC13C\uD130\uB85C \uC5F0\uB77D\uC8FC\uC138\uC694.
